@@ -7,7 +7,6 @@
 <LI><A HREF="/data/loads/go/goamouse/input/goa_mouse.gaf.sorted">GAF File (sorted)</A>
 <LI><A HREF="/data/downloads/purl.obolibrary.org/obo/uberon.obo">Uberon File</A>
 <LI><A HREF="/data/loads/go/goamouse/output/goamouse.annot">Annotations input file</A>
-<LI><A HREF="/data/loads/go/goamouse/output/goamouse.mgi">Annotations to Append to MGI Gene Association file</A>
 </UL>
 
 <H3>Reports</H3>
@@ -22,7 +21,6 @@ Annotations in these files are neither loaded into MGI nor appended to the MGI G
 <LI><A HREF="/data/loads/go/goamouse/output/unresolvedB.error">GOA Annotations where UniProtID does not resolve to a MGI Marker</A>
 <LI><A HREF="/data/loads/go/goamouse/output/unresolvedC.error">GOA Annotations where GO id is a root id (GO:0003674, GO:0008150, GO:0005575)</A>
 <LI><A HREF="/data/loads/go/goamouse/output/uberon.txt">Uberon/EMAPA translations</A>
-<LI><A HREF="/data/loads/go/goamouse/output/uberon.error">Uberon ID errors</A>
 <LI><A HREF="/data/loads/mgi/mgicacheload/logs/inferredfrom.csh.log">Inferred From Providers Missing</A>
 </UL>
 
