@@ -4,8 +4,9 @@
 
 <H3>Inputs</H3>
 <UL>
-<LI><A HREF="/data/loads/go/gomousenoctua/input/mgi.gpad">MGI GPAD File</A>
-<LI><A HREF="/data/loads/go/gomousenoctua/input/pr.gpad">PR GPAD File</A>
+<LI><A HREF="/data/loads/go/gomousenoctua/input/noctua_mgi.gpad">MGI GPAD File</A>
+<LI><A HREF="/data/loads/go/gomousenoctua/input/noctua_pr.gpad">PR GPAD File</A>
+<LI><A HREF="/data/downloads/purl.obolibrary.org/obo/uberon.obo">Uberon File</A>
 <LI><A HREF="/data/loads/go/gomousenoctua/input/gomousenoctua.error">GPAD Errors</A>
 <LI><A HREF="/data/loads/go/gomousenoctua/input/gomousenoctua.annot">Annotations input file</A>
 </UL>
